--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-date-picker": "^10.0.3",
     "react-day-picker": "^8.7.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.11.1",
